--- a/src/app/features/reports-v2/list-report/list-report.component.css
+++ b/src/app/features/reports-v2/list-report/list-report.component.css
@@ -14,3 +14,14 @@
 .move {
   cursor: move;
 }
+::ng-deep .p-datatable-thead tr th{
+  font-size: 8px !important;
+}
+::ng-deep .p-datatable-tbody tr td{
+  font-size: 8px !important;
+  padding: 0px!important;
+  line-height: 25px !important;
+}
+::ng-deep p-paginator {
+  display:none;
+}
