VQ-864 | Need Analysis using JSONB

--- a/src/app/features/lms/ind/components/need-analysis/components/product-data/product-data.component.css
+++ b/src/app/features/lms/ind/components/need-analysis/components/product-data/product-data.component.css
@@ -4,8 +4,7 @@
   background-position: center; /* Adjust to your preferences */
 
   /* Width and height properties */
-  width: 250px; /* Set your desired width */
-  height: 190px; /* Set your desired height */
+  height: 12rem; /* Set your desired height */
 
   /* Additional styles */
   border: 1px solid #ccc; /* Add a border if desired */
