--- a/src/app/features/lms/ind/components/need-analysis/components/product-data/product-data.component.html
+++ b/src/app/features/lms/ind/components/need-analysis/components/product-data/product-data.component.html
@@ -3,12 +3,16 @@
       <div class="text-black fw-bold picture">
 
       </div>
-      <div class="text-black fw-bold pt-2" style="font-size: 12px; ">{{ "Term Life insurance" }}</div>
+      <div class="text-black fw-bold pt-2 d-flex justify-content-center" style="font-size: 12px; ">{{ "Term Life insurance" }}</div>
       <div
-        class="fw-medium pb-2"
+        class="fw-medium pb-2 d-flex justify-content-center"
         style="color: var(--grey-color); font-size: 11px"
       >
         {{ "Provides coverage for a specific term" }}
       </div>
+      <div class=" d-flex justify-content-center">
+        <button type="button" class="btn btn-primary">select</button>
+      </div>
+
     </div>
   </div>
