--- a/src/app/features/lms/components/quotation-list/quotation-list.component.html
+++ b/src/app/features/lms/components/quotation-list/quotation-list.component.html
@@ -143,7 +143,7 @@
                               <div class="row">
                                 <div class="col-sm-12">
                                   <!-- GRRRR -->
-                                    <app-dynamic-table [tableDetails]="policyDataTable"></app-dynamic-table>
+                                    <!-- <app-dynamic-table [tableDetails]="policyDataTable"></app-dynamic-table> -->
 
 
 
