--- a/src/app/features/lms/ind/components/need-analysis/components/analysis-product-list/analysis-product-list.component.html
+++ b/src/app/features/lms/ind/components/need-analysis/components/analysis-product-list/analysis-product-list.component.html
@@ -3,7 +3,7 @@
 <div>
   <div class="row justify-content-start pt-4 p-4">
     <ng-container *ngFor="let item of products">
-      <div class="col-lg-3 col-md-6 col-sm-12 px-2 d-flex">
+      <div class="col-lg-3 col-md-6 col-sm-12 px-2">
         <app-product-data [productId]="item"></app-product-data>
       </div>
 
