VQ-755: Ability to view report details for editing

--- a/src/app/features/reports-v2/create-report/create-report.component.html
+++ b/src/app/features/reports-v2/create-report/create-report.component.html
@@ -129,7 +129,7 @@
 
           </div>
 
-          <div *ngIf="shouldShowContinueButton" class="text-center">
+          <div class="text-center">
             <button
               (click)="viewPreview()"
               class="btn btn-primary mt-3 continueBtn"
